cleaned up some navbar overlap issues

--- a/styles/bobRoss.css
+++ b/styles/bobRoss.css
@@ -32,7 +32,7 @@ nav {
 
 #message-input {
   font-family: 'Vibur', cursive;
-	min-width: 50vw;
+	min-width: 40vw;
   height: 40px;
   -webkit-border-radius: 5;
   -moz-border-radius: 5;
